:money_with_wings: update model && swagger
