# internal/domains/models/user.go
@@ -3,7 +3,6 @@ package models
 import (
 	"time"
 
-	"github.com/HEEPOKE/go-echo-hexagonal-api/pkg/enums"
 	"gorm.io/gorm"
 )
 
@@ -13,7 +12,7 @@ type User struct {
 	Username  string         `gorm:"type:VARCHAR(255);unique" json:"username"`
 	Password  string         `gorm:"type:VARCHAR(255)" json:"password"`
 	Tel       string         `gorm:"type:VARCHAR(255)" json:"tel"`
-	Role      enums.Role     `gorm:"type:ENUM('ADMIN', 'USER')" json:"role"`
+	Role      string         `gorm:"type:VARCHAR(255)" json:"role"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
 	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted_at"`
